--- a/assets/css/messages-button.css
+++ b/assets/css/messages-button.css
@@ -1,9 +1,9 @@
 .messages-button-container {
   position: fixed;
   bottom: 0;
-  right: 70px;
+  right: 65px;
   width: 160px;
-  z-index: 3;
+  z-index: 4;
   height: 40px;
   background: #fff;
   border-radius: 2px 2px 0 0;
